2012-05-27  kitone  <kitone@gna.org>

	* plugins/actions/findandreplace/findandreplace.cc:
	Fix bug #19709 : In glib-2.32, glib/gregex.h cannot be included directly.	Patch by Andre Reinke <andre.reinke>

2012-05-27  kitone  <kitone@gna.org>

	* plugins/actions/plaintext/plaintext.cc:
	* share/ui/dialog-export-text.ui:
	* share/ui/dialog-import-text.ui:
	* src/Makefile.am:
	* src/gui/checkbuttonwithmemory.cc:
	* src/gui/checkbuttonwithmemory.h:
	* src/gui/dialogfilechooser.cc:
	* src/gui/dialogfilechooser.h:
	Add the ability to use blank line during import/export text. Patch by Tomas Partl <eltomito>.

2012-05-27  kitone  <kitone@gna.org>

	* plugins/actions/dialoguize/Makefile.am:
	* plugins/actions/dialoguize/dialog-dialoguize-preferences.ui:
	* plugins/actions/dialoguize/dialoguize.cc:
	Add the ability to define the prefix of dialoguize plugin. Patch by Tomas Partl <eltomito>.

2012-05-01  kitone  <kitone@gna.org>

	* configure.in:
	* plugins/actions/Makefile.am:
	* plugins/actions/stacksubtitles/Makefile.am:
	* plugins/actions/stacksubtitles/stacksubtitles.cc:
	* plugins/actions/stacksubtitles/stacksubtitles.se-plugin.in:
	* share/menubar.xml:
	Introduce new plugin stacksubtitles. Patch by Tomas Partl <eltomito>.

2012-05-01  kitone  <kitone@gna.org>

	* configure.in:
	* plugins/actions/Makefile.am:
	* plugins/actions/minimizeduration/Makefile.am:
	* plugins/actions/minimizeduration/minimizeduration.cc:
	* plugins/actions/minimizeduration/minimizeduration.se-plugin.in:
	* share/menubar.xml:
	Introduce new plugin minimizeduration. Patch by Tomas Partl <eltomito>.

2012-04-29  kitone  <kitone@gna.org>

	* configure.in:
	* plugins/actions/Makefile.am:
	* plugins/actions/bestfit/Makefile.am:
	* plugins/actions/bestfit/bestfit.cc:
	* plugins/actions/bestfit/bestfit.se-plugin.in:
	* share/menubar.xml:
	Introduce new plugin bestfit. Patch by Tomas Partl <eltomito>.

2012-04-29  kitone  <kitone@gna.org>

	* src/utility.cc:
	* src/utility.h: